--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
+  <meta name="description" content="Model similarity has negative effects on using LMs to judge or train other models; Unfortunately LMs are getting similar with increasing capabilities.">
   <meta property="og:title" content="Great Models Think Alike and this Undermines AI Oversight"/>
-  <meta property="og:description" content="As model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures."/>
+  <meta property="og:description" content="Model similarity has negative effects on using LMs to judge or train other models; Unfortunately LMs are getting similar with increasing capabilities."/>
   <meta property="og:url" content="model-similarity.github.io"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/images/main_fig.png" />
@@ -15,7 +15,7 @@
 
 
   <meta name="twitter:title" content="Great Models Think Alike and this Undermines AI Oversight">
-  <meta name="twitter:description" content="As model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.">
+  <meta name="twitter:description" content="We find model similarity has negative effects on using LMs to judge or train other models; Unfortunately LMs are getting similar with increasing capabilities.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/main_fig.png">
   <meta name="twitter:card" content="summary_large_image">
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://shash42.github.io" target="_blank">Shashwat Goel</a><sup>1,2</sup>,</span>
+                <a href="https://shash42.github.io" target="_blank">Shashwat Goel</a><sup>1,2°</sup>,</span>
                 <span class="author-block">
                   <a href="https://github.com/the-klingspor" target="_blank">Joschka Strüber</a><sup>3,4°</sup>,</span>
                   <span class="author-block">
@@ -186,6 +186,16 @@
           </section>
           <!-- End paper abstract -->
 
+
+          <!-- Findings -->
+          <!-- Findings -->
+          <section class="hero is-small">
+            <div class="hero-body">
+              <div class="container">
+                <h1 class="title is-3 has-text-centered">Findings</h1>
+              </div>
+            </div>
+          </section>
 
           <!-- Image carousel -->
           <section class="hero is-small">
