--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
                     Our similarity metric captures whether models make similar mistakes.
                     By analzying 100+ open-weight models, we find that as model capabilities have increased, so has average similarity to models from other developers in the same capability class. <br><br>
                     <b>Implications</b>: If the trend of similarity increasing with capabilities continues, it could mean greater risks of affinity bias in evaluations, and lower gains from inter-LLM training.<br><br>
-                    <i>Overall, as model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.</i>
                   </h2>
                 </div>
             </div>
@@ -242,6 +241,18 @@
         </div>
       </section>
       <!-- End image carousel -->
+
+      <section class="hero is-small">
+        <div class="hero-body">
+          <div class="container">
+            <h2 class="subtitle has-text-justified">
+              <i>Overall, as model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.</i>
+            </h2>
+          </div>
+        </div>
+      </section>
+      
+
 
       <!--BibTex citation -->
         <section class="section" id="BibTeX">
