formatting of conclusion

--- a/index.html
+++ b/index.html
@@ -242,12 +242,14 @@
       </section>
       <!-- End image carousel -->
 
-      <section class="hero is-small">
-        <div class="hero-body">
-          <div class="container">
-            <h2 class="subtitle has-text-justified">
-              <i>Overall, as model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.</i>
-            </h2>
+      <section class="section">
+        <div class="container is-max-desktop">
+          <div class="columns is-centered has-text-centered">
+            <div class="column is-four-fifths">
+              <h2 class="subtitle has-text-justified">
+                <i>Overall, as model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.</i>
+              </h2>
+            </div>
           </div>
         </div>
       </section>
