--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <section class="section">
         <div class="container is-max-desktop">
           <div class="columns is-centered has-text-centered">
-            <div class="column is-four-fifths">
+            <div class="column is-11">
               <h2 class="subtitle has-text-justified">
                 <i>Overall, as model blind-spots get harder to detect, making us defer more to AI oversight, models making more similar mistakes poses the risk of correlated failures.</i>
               </h2>
