--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
   <title>Similarity affects Oversight</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
   <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
@@ -43,6 +42,41 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+
+  <style>
+    * {
+      font-family: 'Google Sans', sans-serif !important;
+    }
+    
+    @media screen and (max-width: 768px) {
+      .publication-title {
+        font-size: 1.8rem !important;
+      }
+      .publication-authors {
+        font-size: 0.9rem !important;
+      }
+      .author-block {
+        display: inline-block;
+        margin-bottom: 0.5rem;
+      }
+      .link-block {
+        display: inline-block;
+        margin: 0.25rem;
+      }
+      .subtitle {
+        font-size: 0.9rem !important;
+      }
+      .content p {
+        font-size: 0.9rem;
+      }
+      img {
+        width: 100% !important;
+      }
+      .container {
+        padding: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
@@ -62,7 +96,7 @@
                   <span class="author-block">
                     <a href="https://ilzeamandaa.github.io" target="_blank">Ilze Amanda Auzina</a><sup>3,4°</sup>,</span>
                     <span class="author-block">
-                      <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Karuna K Chandra</a><sup>5°</sup>,</span>
+                      <a href="https://www.linkedin.com/in/karuna-k-c-519945214/" target="_blank">Karuna K Chandra</a><sup>5°</sup>,</span>
                       <span class="author-block">
                         <a href="https://precog.iiit.ac.in" target="_blank">Ponnurangam Kumaraguru</a><sup>5</sup>,</span>
                         <span class="author-block">
@@ -125,7 +159,7 @@
                               <span class="icon">
                                 <img src="static/images/huggingface_logo-noborder.svg" width="24px" height="24px">
                               </span>
-                              <span>Compute Similarities</span>
+                              <span>Try it yourself!</span>
                             </a>
                           </span>
 
@@ -156,7 +190,7 @@
             <div class="container is-max-desktop">
               <div class="hero-body">
                 <div style="text-align: center;">
-                  <img src="static/images/main_fig.png" alt="Main figure" width="82%">
+                  <img src="static/images/main_fig.png" alt="Main figure" style="max-width: 82%; width: 100%;">
                 </div>
                 <h2 class="subtitle has-text-centered">
                  We develop a novel probabilistic metric for model similarity κ<sub>p</sub> which adjusts for chance agreement due to accuracy. Using this, we find:
@@ -186,6 +220,88 @@
           </section>
           <!-- End paper abstract -->
 
+          <!-- Similarity Metric -->
+          <section class="hero is-small">
+            <div class="hero-body">
+              <div class="container">
+                <h1 class="title is-3 has-text-centered">Similarity Metric</h1>
+                <div class="content has-text-justified">
+                  <p>Two models with 90% accuracy have much lesser scope to disagree than two models with 50% accuracy. 
+                     So we adjust for chance agreement due to accuracy, that is, how much two independent models with the given accuracies will agree. We extend the <a href="https://proceedings.neurips.cc/paper_files/paper/2020/hash/9f6992966d4c363ea0162a056cb45fe5-Abstract.html">Error Consistency</a> metric in two key ways:
+                     (1) When both models are wrong, they can still disagree. We compare sample-wise predictions instead of sample-wise correctness.
+                     (2) We incorporate the probabilies models provide over options.
+                  </p>
+                  
+                  <!-- <div style="text-align: center;">
+                    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-bottom: 5px;">
+                      <img src="static/images/cobs.png" alt="Observed correlation" style="width: 100%; max-width: 40%;">
+                      <img src="static/images/cexp.png" alt="Expected correlation" style="width: 100%; max-width: 60%;">
+                    </div>
+                    <img src="static/images/kappa_p.png" alt="Kappa_p formula" style="width: 100%; max-width: 20%;">
+                  </div> -->
+
+                  <table class="table is-bordered is-striped is-narrow is-hoverable" style="margin: 0 auto;">
+                    <thead>
+                      <tr>
+                        <th>Metric</th>
+                        <th>Adjusts for<br>Accuracy</th>
+                        <th>Distinguishes<br>different mistakes</th>
+                        <th>Incorporates<br>Probabilities</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td><a href="https://arxiv.org/abs/2407.09141">%Flips</a> = 1 - c<sub>obs</sub></td>
+                        <td>❌</td>
+                        <td>❌</td>
+                        <td>❌</td>
+                      </tr>
+                      <tr>
+                        <td>Cohen's κ, Scott's π, Fleiss κ</td>
+                        <td>❌</td>
+                        <td>✅</td>
+                        <td>❌</td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://arxiv.org/abs/2306.05685">%Agreement</a></td>
+                        <td>❌</td>
+                        <td>✅</td>
+                        <td>❌</td>
+                      </tr>
+                      <tr>
+                        <td><a href="https://proceedings.neurips.cc/paper_files/paper/2020/hash/9f6992966d4c363ea0162a056cb45fe5-Abstract.html">Error Consistency</a></td>
+                        <td>✅</td>
+                        <td>❌</td>
+                        <td>❌</td>
+                      </tr>
+                      <tr>
+                        <td>Pearson / Matthew's Correlation of Errors</td>
+                        <td>✅</td>
+                        <td>❌</td>
+                        <td>❌</td>
+                      </tr>
+                      <tr>
+                        <td>Divergence metrics like KL, JSD</td>
+                        <td>❌</td>
+                        <td>✅</td>
+                        <td>✅</td>
+                      </tr>
+                      <tr style="border: 2px solid black;">
+                        <td>κ<sub>p</sub> (Ours)</td>
+                        <td>✅</td>
+                        <td>✅</td>
+                        <td>✅</td>
+                      </tr>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <p style="margin-top: 1rem;">
+                    For our metric definition and theoretical properties, checkout our paper. You can compute similarities between different models using <a href="https://huggingface.co/spaces/bethgelab/lm-similarity">our tool</a>! 
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
           <!-- Findings -->
           <section class="hero is-small">
             <div class="hero-body">
@@ -203,7 +319,7 @@
                   <h1 class="title is-4 has-text-centered">
                     <b>Evaluation: Affinity Bias in LLM-as-a-judge</b>
                   </h1>
-                  <img src="static/images/judgement_scores_vs_similarity.png" alt="Similarity vs Judgment scores plot" style="width: 50%; object-fit: contain; margin: 0 auto 20px auto;"/>
+                  <img src="static/images/judgement_scores_vs_similarity.png" alt="Similarity vs Judgment scores plot" style="width: 100%; max-width: 50%; object-fit: contain; margin: 0 auto 20px auto;"/>
                   <h2 class="subtitle has-text-justified" style="max-width: 800px; margin: 0 auto;">
                     LLM-as-a-judge scores show <b>affinity bias</b> towards more similar models, after controlling for the evaluated model's capability. 
                     For partial correlation and multiple regression analysis, checkout our paper. 
@@ -214,7 +330,7 @@
                   <h1 class="title is-4 has-text-centered">
                     <b>Training on LM Annotations benefits from Complementary Knowledge</b>
                   </h1>
-                  <img src="static/images/kappavsgain.png" alt="Similarity vs Gain from weak-to-strongn training plot" style="width: 50%; object-fit: contain; margin: 0 auto 20px auto;"/>
+                  <img src="static/images/kappavsgain.png" alt="Similarity vs Gain from weak-to-strongn training plot" style="width: 100%; max-width: 50%; object-fit: contain; margin: 0 auto 20px auto;"/>
                   <h2 class="subtitle has-text-justified" style="max-width: 800px; margin: 0 auto;">
                     Student models trained on annotations of smaller supervisors show higher performance improvements, or <B>weak-to-strong generalization</B>, when the student and supervisor have lower similarity. 
                     In our paper, we also show that current weak-to-strong training methods have a higher performance ceiling than assumed previously, if they leverage complementary knowledge between the supervisor and student more effectively.
@@ -225,7 +341,7 @@
                   <h1 class="title is-4 has-text-centered">
                     <b> With Increasing Capabilities, Model Errors are Becoming More Correlated</b>
                   </h1>
-                  <img src="static/images/size_colored_by_family.png" alt="Similarilty increases as capabilities increase" style="width: 50%; object-fit: contain; margin: 20px auto 20px auto;"/>
+                  <img src="static/images/size_colored_by_family.png" alt="Similarilty increases as capabilities increase" style="width: 100%; max-width: 50%; object-fit: contain; margin: 20px auto 20px auto;"/>
                   <h2 class="subtitle has-text-justified" style="max-width: 800px; margin: 0 auto;">
                     Our similarity metric captures whether models make similar mistakes.
                     By analzying 100+ open-weight models, we find that as model capabilities have increased, so has average similarity to models from other developers in the same capability class. <br><br>
