justified fig1 caption

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div style="text-align: center;">
                   <img src="static/images/main_fig.png" alt="Main figure" style="max-width: 82%; width: 100%;">
                 </div>
-                <h2 class="subtitle has-text-centered">
+                <h2 class="subtitle has-text-justified">
                  We propose <i>Chance Adjusted Probabilistic Agreement (CAPA, or κ<sub>p</sub>)</i>, a novel metric for model similarity which adjusts for chance agreement due to accuracy. Using CAPA, we find:
                  (1) LLM-as-a-judge scores are biased towards more similar models controlling for the model's capability.
                  (2) Gain from training strong models on annotations of weak supervisors (weak-to-strong generalization) is higher when the two models are more different.
